// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render failed 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c7 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 8px;
  min-height: 254px;
  flex: 0 0 auto;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c13 {
  box-sizing: border-box;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c15 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c17 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c19 {
  box-sizing: border-box;
}

.c21 {
  box-sizing: border-box;
  margin-bottom: 8px;
  margin-right: 16px;
  width: 100%;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #651FFF;
}

.c18:active {
  background: #354AA4;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
  width: 100%;
}

.c24:active {
  opacity: 0.56;
}

.c24:hover,
.c24:focus {
  background: #651FFF;
}

.c24:active {
  background: #354AA4;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c25 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c25:active {
  opacity: 0.56;
}

.c25:hover,
.c25:focus {
  background: #2C3A73;
}

.c25:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c16 {
  display: flex;
}

.c20 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c23 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c23::-ms-clear {
  display: none;
}

.c23::placeholder {
  opacity: 0.4;
}

.c23:read-only {
  cursor: not-allowed;
}

.c22 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
  margin-bottom: 0;
  font-size: 10px;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin-right: auto;
  margin-bottom: 24px;
  margin: 0;
  color: rgba(255,255,255,0.87);
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0;
}

.c10 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Add Kubernetes
        </div>
        <div
          class="c7"
          kind="danger"
        >
          some error message
        </div>
        <div
          class="c8 c5"
        >
          <div
            class="c9"
          >
            Install Teleport Agent in your cluster via Helm to easily connect your Kubernetes cluster with Teleport. For all the available values of the helm chart see
             
            <a
              class="c10"
              href="https://goteleport.com/docs/kubernetes-access/helm/reference/teleport-kube-agent/"
              rel="noreferrer"
              target="_blank"
            >
              the documentation
            </a>
            .
          </div>
          <div
            class="c9"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                Step 1
              </span>
               - Add teleport-agent chart to your charts repository
            </div>
            <div
              class="c13 c14"
            >
              <div
                class="c15 c16"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c17"
                >
                  $
                </div>
                <div>
                  helm repo add teleport https://charts.releases.teleport.dev && helm repo update
                </div>
              </div>
              <button
                class="c18"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c9"
          >
            <span
              class="c12"
            >
              Step 2
            </span>
             - Generate a script to automatically configure and install the teleport-agent
            <div
              class="c19 c20"
            >
              <form
                style="width: 100%;"
              >
                <div
                  class="c21"
                  width="100%"
                >
                  <label
                    class="c22"
                    font-size="0"
                  >
                    Namespace
                    <input
                      autocomplete="off"
                      class="c23"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="teleport"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="c21"
                  width="100%"
                >
                  <label
                    class="c22"
                    font-size="0"
                  >
                    Kubernetes Cluster Name
                    <span
                      class="c11"
                      style="font-weight: normal;"
                    >
                       - Name shown to Teleport users connecting to the cluster.
                    </span>
                    <input
                      autocomplete="off"
                      class="c23"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="my-cluster"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <button
                  class="c24"
                  kind="primary"
                  type="submit"
                >
                  Generate Script
                </button>
              </form>
            </div>
          </div>
          
        </div>
        <div
          class="c19"
        >
          <button
            class="c25"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render loaded 1`] = `
.c4 {
  box-sizing: border-box;
  flex: 1;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 8px;
  min-height: 254px;
  flex: 0 0 auto;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c12 {
  box-sizing: border-box;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c16 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c18 {
  box-sizing: border-box;
}

.c20 {
  box-sizing: border-box;
  margin-bottom: 8px;
  margin-right: 16px;
  width: 100%;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
  width: 100%;
}

.c23:active {
  opacity: 0.56;
}

.c23:hover,
.c23:focus {
  background: #651FFF;
}

.c23:active {
  background: #354AA4;
}

.c23:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c24:active {
  opacity: 0.56;
}

.c24:hover,
.c24:focus {
  background: #2C3A73;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c13 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c15 {
  display: flex;
}

.c19 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c22 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c22::-ms-clear {
  display: none;
}

.c22::placeholder {
  opacity: 0.4;
}

.c22:read-only {
  cursor: not-allowed;
}

.c21 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
  margin-bottom: 0;
  font-size: 10px;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin-right: auto;
  margin-bottom: 24px;
  margin: 0;
  color: rgba(255,255,255,0.87);
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0;
}

.c9 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Add Kubernetes
        </div>
        <div
          class="c7 c5"
        >
          <div
            class="c8"
          >
            Install Teleport Agent in your cluster via Helm to easily connect your Kubernetes cluster with Teleport. For all the available values of the helm chart see
             
            <a
              class="c9"
              href="https://goteleport.com/docs/kubernetes-access/helm/reference/teleport-kube-agent/"
              rel="noreferrer"
              target="_blank"
            >
              the documentation
            </a>
            .
          </div>
          <div
            class="c8"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Step 1
              </span>
               - Add teleport-agent chart to your charts repository
            </div>
            <div
              class="c12 c13"
            >
              <div
                class="c14 c15"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                >
                  $
                </div>
                <div>
                  helm repo add teleport https://charts.releases.teleport.dev && helm repo update
                </div>
              </div>
              <button
                class="c17"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c11"
            >
              Step 2
            </span>
             - Generate a script to automatically configure and install the teleport-agent
            <div
              class="c18 c19"
            >
              <form
                style="width: 100%;"
              >
                <div
                  class="c20"
                  width="100%"
                >
                  <label
                    class="c21"
                    font-size="0"
                  >
                    Namespace
                    <input
                      autocomplete="off"
                      class="c22"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="teleport"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="c20"
                  width="100%"
                >
                  <label
                    class="c21"
                    font-size="0"
                  >
                    Kubernetes Cluster Name
                    <span
                      class="c10"
                      style="font-weight: normal;"
                    >
                       - Name shown to Teleport users connecting to the cluster.
                    </span>
                    <input
                      autocomplete="off"
                      class="c22"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="my-cluster"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <button
                  class="c23"
                  kind="primary"
                  type="submit"
                >
                  Generate Script
                </button>
              </form>
            </div>
          </div>
          
        </div>
        <div
          class="c18"
        >
          <button
            class="c24"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render processing 1`] = `
.c4 {
  box-sizing: border-box;
  flex: 1;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 8px;
  min-height: 254px;
  flex: 0 0 auto;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c12 {
  box-sizing: border-box;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c16 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c18 {
  box-sizing: border-box;
}

.c20 {
  box-sizing: border-box;
  margin-bottom: 8px;
  margin-right: 16px;
  width: 100%;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
  width: 100%;
}

.c23:active {
  opacity: 0.56;
}

.c23:hover,
.c23:focus {
  background: #651FFF;
}

.c23:active {
  background: #354AA4;
}

.c23:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c24:active {
  opacity: 0.56;
}

.c24:hover,
.c24:focus {
  background: #2C3A73;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c13 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c15 {
  display: flex;
}

.c19 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c22 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c22::-ms-clear {
  display: none;
}

.c22::placeholder {
  opacity: 0.4;
}

.c22:read-only {
  cursor: not-allowed;
}

.c21 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
  margin-bottom: 0;
  font-size: 10px;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin-right: auto;
  margin-bottom: 24px;
  margin: 0;
  color: rgba(255,255,255,0.87);
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0;
}

.c9 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Add Kubernetes
        </div>
        <div
          class="c7 c5"
        >
          <div
            class="c8"
          >
            Install Teleport Agent in your cluster via Helm to easily connect your Kubernetes cluster with Teleport. For all the available values of the helm chart see
             
            <a
              class="c9"
              href="https://goteleport.com/docs/kubernetes-access/helm/reference/teleport-kube-agent/"
              rel="noreferrer"
              target="_blank"
            >
              the documentation
            </a>
            .
          </div>
          <div
            class="c8"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Step 1
              </span>
               - Add teleport-agent chart to your charts repository
            </div>
            <div
              class="c12 c13"
            >
              <div
                class="c14 c15"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                >
                  $
                </div>
                <div>
                  helm repo add teleport https://charts.releases.teleport.dev && helm repo update
                </div>
              </div>
              <button
                class="c17"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c11"
            >
              Step 2
            </span>
             - Generate a script to automatically configure and install the teleport-agent
            <div
              class="c18 c19"
            >
              <form
                style="width: 100%;"
              >
                <div
                  class="c20"
                  width="100%"
                >
                  <label
                    class="c21"
                    font-size="0"
                  >
                    Namespace
                    <input
                      autocomplete="off"
                      class="c22"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="teleport"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="c20"
                  width="100%"
                >
                  <label
                    class="c21"
                    font-size="0"
                  >
                    Kubernetes Cluster Name
                    <span
                      class="c10"
                      style="font-weight: normal;"
                    >
                       - Name shown to Teleport users connecting to the cluster.
                    </span>
                    <input
                      autocomplete="off"
                      class="c22"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="my-cluster"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <button
                  class="c23"
                  disabled=""
                  kind="primary"
                  type="submit"
                >
                  Generate Script
                </button>
              </form>
            </div>
          </div>
          
        </div>
        <div
          class="c18"
        >
          <button
            class="c24"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render with token generated 1`] = `
.c4 {
  box-sizing: border-box;
  flex: 1;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 8px;
  min-height: 254px;
  flex: 0 0 auto;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c12 {
  box-sizing: border-box;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c16 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c18 {
  box-sizing: border-box;
}

.c20 {
  box-sizing: border-box;
  margin-bottom: 8px;
  margin-right: 16px;
  width: 100%;
}

.c25 {
  box-sizing: border-box;
  padding: 8px;
  margin-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
  width: 100%;
}

.c23:active {
  opacity: 0.56;
}

.c23:hover,
.c23:focus {
  background: #651FFF;
}

.c23:active {
  background: #354AA4;
}

.c23:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c26 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c26:active {
  opacity: 0.56;
}

.c26:hover,
.c26:focus {
  background: #2C3A73;
}

.c26:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c13 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c15 {
  display: flex;
}

.c19 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c22 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c22::-ms-clear {
  display: none;
}

.c22::placeholder {
  opacity: 0.4;
}

.c22:read-only {
  cursor: not-allowed;
}

.c21 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
  margin-bottom: 0;
  font-size: 10px;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin-right: auto;
  margin-bottom: 24px;
  margin: 0;
  color: rgba(255,255,255,0.87);
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 8px;
  margin-bottom: 4px;
  margin: 0;
}

.c9 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Add Kubernetes
        </div>
        <div
          class="c7 c5"
        >
          <div
            class="c8"
          >
            Install Teleport Agent in your cluster via Helm to easily connect your Kubernetes cluster with Teleport. For all the available values of the helm chart see
             
            <a
              class="c9"
              href="https://goteleport.com/docs/kubernetes-access/helm/reference/teleport-kube-agent/"
              rel="noreferrer"
              target="_blank"
            >
              the documentation
            </a>
            .
          </div>
          <div
            class="c8"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                Step 1
              </span>
               - Add teleport-agent chart to your charts repository
            </div>
            <div
              class="c12 c13"
            >
              <div
                class="c14 c15"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                >
                  $
                </div>
                <div>
                  helm repo add teleport https://charts.releases.teleport.dev && helm repo update
                </div>
              </div>
              <button
                class="c17"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c11"
            >
              Step 2
            </span>
             - Generate a script to automatically configure and install the teleport-agent
            <div
              class="c18 c19"
            >
              <form
                style="width: 100%;"
              >
                <div
                  class="c20"
                  width="100%"
                >
                  <label
                    class="c21"
                    font-size="0"
                  >
                    Namespace
                    <input
                      autocomplete="off"
                      class="c22"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="teleport"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="c20"
                  width="100%"
                >
                  <label
                    class="c21"
                    font-size="0"
                  >
                    Kubernetes Cluster Name
                    <span
                      class="c10"
                      style="font-weight: normal;"
                    >
                       - Name shown to Teleport users connecting to the cluster.
                    </span>
                    <input
                      autocomplete="off"
                      class="c22"
                      color="text.onLight"
                      inputmode="text"
                      placeholder="my-cluster"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
                <button
                  class="c23"
                  kind="primary"
                  type="submit"
                >
                  Regenerate Script
                </button>
              </form>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c11"
            >
              Step 3
            </span>
             - Install the helm chart
            <div
              class="c18"
            >
              <div
                class="c24"
              >
                The token will be valid for
                 
                <span
                  class="c11"
                >
                  4 hours
                  .
                </span>
              </div>
              <div
                class="c25 c13"
              >
                <div
                  class="c14 c15"
                  style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
                >
                  <div
                    class="c16"
                  >
                    $
                  </div>
                  <div>
                    cat &lt;&lt; EOF &gt; prod-cluster-values.yaml
roles: kube
authToken: some token
proxyAddr: localhost:443
kubeClusterName: 
teleportVersionOverride: 10.0.0
EOF
 
helm install teleport-agent teleport/teleport-kube-agent -f prod-cluster-values.yaml --create-namespace --namespace 
                  </div>
                </div>
                <button
                  class="c17"
                  kind="primary"
                  style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
                >
                  Copy
                </button>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c11"
                >
                  Tip
                </span>
                : Save the YAML file to apply updates later
              </div>
            </div>
          </div>
        </div>
        <div
          class="c18"
        >
          <button
            class="c26"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
